updated bar chart

--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
         <label for="Notes">Additional Notes:</label>
         <input id="notes" type="text" placeholder="Notes" />
 
-        <!-- Submit Order Btn  -->
         <button id="submit" onclick="createOrder(); addCount();">SUBMIT</button>
-
-        <!-- Delete Order Btn -->
-        <!-- <button onclick="removeOrder();">Delete Recent Order</button> -->
       </div>
       <br />
 
@@ -106,7 +102,7 @@
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-    <!-- <script src="lib/jquery-3.6.1.min.js"></script> -->
+    <script src="lib/jquery-3.6.1.min.js"></script>
     <script src="app/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
   </body>
